--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,18 @@ body {
     background-color: #1C1C1C;
 }
 
+#song {
+
+}
+
+.container-main {
+    display: flex;
+    width: 500px;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
 .container-slider {
     display: flex;
     width: 100%;
