--- a/src/style.css
+++ b/src/style.css
@@ -6,18 +6,12 @@
 
 body {
     background-color: #1C1C1C;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 
 #song {
 
-}
-
-.container-main {
-    display: flex;
-    width: 500px;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
 }
 
 .container-slider {
@@ -64,4 +58,8 @@ body {
 
 #prev-button {
     transform: rotate(180deg);
+}
+
+.texto {
+    width: 300px;
 }
